# PHM-reproducibility-gap

./: .gitignore  ANALYZER.md  README.md  VALIDATION.md  pyproject.toml
config/: pilot_2022.yaml
data/processed/: audit_results.csv  audit_trace.csv  manual_review_queue.csv  paper_manifest.csv  papers.jsonl  summary.json
data/validation/: combined_validation_summary.json  combined_validation_table.csv  gold_set_template.csv  ijphm_manual_validation_gold.csv  ijphm_manual_validation_report.md  ijphm_manual_validation_sample.csv  ijphm_manual_validation_snippets.csv  phm_manual_validation_gold.csv  phm_manual_validation_report.md  phm_manual_validation_sample.csv  phm_manual_validation_snippets.csv
docs/plans/: 2026-04-06-reproducibility-figures.md
engine/: __init__.py  consensus.py  evidence.py  judges.py  rows.py  rules.py  scoring.py  types.py
parsers/: __init__.py  ijphm_ojs.py  phm_ojs.py
plots/: README.md  __init__.py  build_audit_figures.py
plots/output/: plot_data.csv  pooled_overview_data.csv  (+1 more)
scripts/: __init__.py  bootstrap_2022.py  build_appendix_tables.py  build_paper_exports.py  build_validation_summary.py  evaluate_2022.py  manual_validation.py  phm_manual_validation.py  prepare_gold_set.py
shared/: __init__.py  http.py  manifest.py  normalize.py  pdf_extract.py  rate_limit.py  schemas.py  settings.py  storage.py
tests/: __init__.py  test_bootstrap_2022.py  test_build_appendix_tables.py  test_build_paper_exports.py  test_build_validation_summary.py  test_evaluate_2022.py  test_manual_validation.py  test_prepare_gold_set.py
(+68 files in other folders)
